# font-tool

./: .clang-format  CMakeLists.txt  LICENSE  README.md  a.txt  compile  compile-debug  compile-gcc  curlhelp.cpp  current-version  distribute  finfo.cpp  finfo.h  frame.cpp  frame.h  icon.indd  icon.xpm  locale.cpp  main.cpp  main.h  resource.rc  resource.res  text.txt.vsp  trayicon.cpp  trayicon.h  trevtdata.cpp  trevtdata.h  tritem.cpp  tritem.h  tritemdata.cpp  tritemdata.h
src/: curlhelp.cpp  finfo.cpp  finfo.h  frame.cpp  frame.h  locale.cpp  main.cpp  main.h  resource.rc  trayicon.cpp  trayicon.h  trevtdata.cpp  trevtdata.h  tritem.cpp  tritem.h  tritemdata.cpp  tritemdata.h
