cmake_minimum_required(VERSION 2.6)
project(FontTool)

set(CMAKE_CXX_FLAGS_DEBUG "-MTd /ZI -MP -fp:fast -D_CRT_SECURE_NO_DEPRECATE -D_CRT_NONSTDC_NO_DEPRECATE -DCURL_STATICLIB -DBOOST_CONFIG_SUPPRESS_OUTDATED_MESSAGE -D_CRTDBG_MAP_ALLOC")

set(CMAKE_CXX_FLAGS_RELEASE "-O1 -Os -MT -MP -fp:fast -D_CRT_SECURE_NO_DEPRECATE -D_CRT_NONSTDC_NO_DEPRECATE -DCURL_STATICLIB -DBOOST_CONFIG_SUPPRESS_OUTDATED_MESSAGE -DNDEBUG -D_NDEBUG_")


file(GLOB HEADERS ${CMAKE_SOURCE_DIR}/src/*.h)
file(GLOB SOURCES ${CMAKE_SOURCE_DIR}/src/*.cpp)
include_directories(${CMAKE_SOURCE_DIR})

link_libraries(debug wxmsw31ud_richtext)
link_libraries(debug wxmsw31ud_adv)
link_libraries(debug wxmsw31ud_aui)
link_libraries(debug wxmsw31ud_gl)
link_libraries(debug wxmsw31ud_html)
link_libraries(debug wxmsw31ud_media)
link_libraries(debug wxmsw31ud_propgrid)
link_libraries(debug wxmsw31ud_ribbon)
link_libraries(debug wxmsw31ud_stc)
link_libraries(debug wxmsw31ud_webview)
link_libraries(debug wxmsw31ud_xrc)
link_libraries(debug wxmsw31ud_core)
link_libraries(debug wxbase31ud)
link_libraries(debug wxbase31ud_net)
link_libraries(debug wxbase31ud_xml)
link_libraries(debug wxexpatd)
link_libraries(debug wxjpegd)
link_libraries(debug wxpngd)
link_libraries(debug wxregexud)
link_libraries(debug wxscintillad)
link_libraries(debug wxtiffd)
link_libraries(debug wxzlibd)

link_libraries(optimized wxmsw31u_richtext)
link_libraries(optimized wxmsw31u_adv)
link_libraries(optimized wxmsw31u_aui)
link_libraries(optimized wxmsw31u_gl)
link_libraries(optimized wxmsw31u_html)
link_libraries(optimized wxmsw31u_media)
link_libraries(optimized wxmsw31u_propgrid)
link_libraries(optimized wxmsw31u_ribbon)
link_libraries(optimized wxmsw31u_stc)
link_libraries(optimized wxmsw31u_webview)
link_libraries(optimized wxmsw31u_xrc)
link_libraries(optimized wxmsw31u_core)
link_libraries(optimized wxbase31u)
link_libraries(optimized wxbase31u_net)
link_libraries(optimized wxbase31u_xml)
link_libraries(optimized wxexpat)
link_libraries(optimized wxjpeg)
link_libraries(optimized wxpng)
link_libraries(optimized wxregexu)
link_libraries(optimized wxscintilla)
link_libraries(optimized wxtiff)
link_libraries(optimized wxzlib)

link_libraries(debug libcurl_a_debug.lib)
link_libraries(optimized libcurl_a.lib)

link_libraries(kernel32)
link_libraries(user32)
link_libraries(gdi32)
link_libraries(comdlg32)
link_libraries(winspool)
link_libraries(winmm)
link_libraries(shell32)
link_libraries(comctl32)
link_libraries(ole32)
link_libraries(oleaut32)
link_libraries(uuid)
link_libraries(rpcrt4)
link_libraries(advapi32)
link_libraries(shlwapi)
link_libraries(version)
link_libraries(uxtheme)
link_libraries(oleacc)

# setting the language
OPTION(LANG "Setting the language" 0) # Enabled by default
ADD_DEFINITIONS(-DLANG=${LANG})

add_executable(FontTool ${HEADERS} ${SOURCES} ${CMAKE_SOURCE_DIR}/src/resource.rc)
set_target_properties(FontTool PROPERTIES LINK_FLAGS_RELEASE "-SUBSYSTEM:WINDOWS -NXCOMPAT -DYNAMICBASE -LTCG")
